# qemu

./: configure  meson.build  meson_options.txt
accel/hvf/: hvf-accel-ops.c
accel/tcg/: cpu-exec.c  cputlb.c  tb-maint.c  tcg-accel-ops.c  translate-all.c
audio/: audio.c
block/: file-posix.c
contrib/vhost-user-gpu/: virgl.c
docs/specs/: tpm.rst
host/include/generic/host/: atomic128-cas.h
hw/acpi/: aml-build.c
hw/arm/: Kconfig  virt-acpi-build.c  virt.c
hw/audio/: Kconfig  meson.build  screamer.c
hw/core/: machine.c  sysbus-fdt.c
hw/display/: meson.build  virtio-gpu-virgl.c
hw/i386/: acpi-build.c
hw/intc/: arm_gicv3_its.c  gicv3_internal.h
hw/loongarch/: Kconfig  acpi-build.c  virt.c
hw/misc/macio/: macio.c
hw/ppc/: Kconfig
hw/riscv/: Kconfig  virt.c
hw/tpm/: tpm_crb.c  tpm_crb_common.c  tpm_crb_sysbus.c  tpm_ppi.c  tpm_tis_isa.c  tpm_tis_sysbus.c
hw/usb/: redirect.c
include/disas/: dis-asm.h
include/exec/: exec-all.h
include/hw/intc/: arm_gicv3_its_common.h
include/hw/misc/macio/: macio.h
include/qemu/: osdep.h
include/sysemu/: hvf_int.h
include/tcg/: tcg-opc.h  tcg.h
include/ui/: console.h  egl-helpers.h  sdl2.h  spice-display.h  surface.h
net/: vmnet-bridged.m
pc-bios/: edk2-aarch64-secure-code.fd.bz2  meson.build  openbios-ppc
scripts/: meson-buildoptions.sh
subprojects/: libucontext.wrap
system/: meson.build  qemu.symbols  vl.c
tcg/: meson.build  optimize.c  region.c  tcg-op.c  tcg.c
tcg/aarch64-tcti/: tcg-target-reg-bits.h  tcg-target.c.inc  tcg-target.h  tcti-gadget-gen.py
tests/qtest/: bios-tables-test.c  meson.build  tpm-tests.c
ui/: console-gl.c  console.c  dbus-console.c  dbus-listener.c  egl-headless.c  egl-helpers.c  gtk-egl.c  gtk-gl-area.c  meson.build  sdl2-gl.c  spice-core.c  spice-display.c  vnc.c
ui/shader/: meson.build
util/: coroutine-ucontext.c  error-report.c  osdep.c  rcu.c
